2010-08-19  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Chromium DevTools: There is no need in resource-based InjectedScript.js source.
        Now that we populate front-end after its onload handler, we don't need
        to install injected script early. Exposing injected script source on the WebCore
        level here.
        https://bugs.webkit.org/show_bug.cgi?id=44029

        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
        (DRTDevToolsAgent::runtimePropertyChanged):
        (DRTDevToolsAgent::delayedFrontendLoaded):
        (DRTDevToolsAgent::frontendLoaded):
        * DumpRenderTree/chromium/DRTDevToolsAgent.h:

2010-08-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Kenneth Rohde Christiansen.

        [Gtk] Enable view mode media feature layout test
        https://bugs.webkit.org/show_bug.cgi?id=43278

        Add view mode media feature testing infrastructure, and add
        placeholder methods for the other platforms'
        LayoutTestControllers.

        * DumpRenderTree/LayoutTestController.cpp:
        (setViewModeMediaFeatureCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setViewModeMediaFeature):
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setViewModeMediaFeature):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setViewModeMediaFeature):
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::setViewModeMediaFeature):

2010-08-18  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Make it so the WebKit2 test slave runs the WebKit2 tests

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2010-08-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.
