@@ -63,7 +63,6 @@ public:
     virtual int hostIdentifier() { return m_routingID; }
     virtual void forceRepaint();
     virtual void runtimePropertyChanged(const WebKit::WebString& name, const WebKit::WebString& value);
-    virtual WebKit::WebCString injectedScriptSource();
     virtual WebKit::WebCString debuggerScriptSource();
 
     void asyncCall(const DRTDevToolsCallArgs&);
