@@ -2,6 +2,16 @@
 
         Reviewed by Yury Semikhatsky.
 
+        Chromium DevTools: remove injected script fetcher from test harness.
+        https://bugs.webkit.org/show_bug.cgi?id=44266
+
+        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
+        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
+
+2010-08-19  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
         Chromium DevTools: There is no need in resource-based InjectedScript.js source.
         Now that we populate front-end after its onload handler, we don't need
         to install injected script early. Exposing injected script source on the WebCore
